--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^5.5.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
