--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^5.5.7",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "terminal-link": "^3.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
