--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   node:
     image: node:12
+    build: .
     volumes:
       - "./api:/var/www"  
     ports:
@@ -12,7 +13,8 @@ services:
     links:
       - mongo
     environment:
-      - URL_MONGO=mongodb://Username:password@mongo
+      - SESSION_SECRET=secret
+      - DATABASE_URL=mongodb://Username:password@mongo:27017/subscribers
 
   mongo:
     image: mongo:4.0
