--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,33 @@
-version: '3'
+version: "3.8"
 
 services:
-  node:
-    image: node:12
-    build: .
-    volumes:
-      - "./api:/var/www"  
-    ports:
-      - "4000:4000"
-    expose:
-      - 4000
-    links:
-      - mongo
+  mongodb:
+    image: mongo:5.0.2
+    restart: unless-stopped
+    env_file: ./.env
     environment:
-      - SESSION_SECRET=secret
-      - DATABASE_URL=mongodb://Username:password@mongo:27017/subscribers
-
-  mongo:
-    image: mongo:4.0
+      - MONGO_INITDB_ROOT_USERNAME=$MONGODB_USER
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGODB_PASSWORD
+    ports:
+      - $MONGODB_LOCAL_PORT:$MONGODB_DOCKER_PORT
     volumes:
-      - "./mongo/data:/data/db"
-    ports: 
-      - "27017:27017"
-    environment: 
-      - MONGO_INITDB_ROOT_USERNAME=Username
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      - db:/data/db
+  app:
+    depends_on:
+      - mongodb
+    build: ./app
+    restart: unless-stopped
+    env_file: ./.env
+    ports:
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
+    environment:
+      - DB_HOST=mongodb
+      - DB_USER=$MONGODB_USER
+      - DB_PASSWORD=$MONGODB_PASSWORD
+      - DB_NAME=$MONGODB_DATABASE
+      - DB_PORT=$MONGODB_DOCKER_PORT
+    stdin_open: true
+    tty: true
+
+volumes:
+  db:
